<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/white"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:background="@color/blue"
        android:clickable="true"
        android:enabled="true"
        android:gravity="center"
        android:onClick="onClickLogin"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/str_login"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/button_login"
        android:hint="@string/str_account"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="25dp"
        android:background="@color/white"
        android:lines="1"
        android:padding="5dp" />
</RelativeLayout>
